# postero

./: .gitignore  Cargo.toml  MIGRATION_SUMMARY.md  README.md  docker-compose.yml  setup-database.sh  setup-postgrest.sh
examples/: generate-jwt.js  package.json  test-postgrest-api.sh
init-scripts/: 00-create-extensions.sql  01-create-enums.sql  02-create-tables.sql  03-create-materialized-views.sql  04-create-api-roles.sql  05-create-api-views.sql  06-row-level-security.sql
migrations/: 001_separate_sync_directions.sql  002_event_driven_sync.sql
src/: config.rs  error.rs  lib.rs
src/filesystem/: mod.rs  s3.rs
src/zotero/: client.rs  collection.rs  group.rs  item.rs  library.rs  mod.rs  sync.rs  sync_queue.rs  sync_worker.rs  tag.rs  types.rs  user.rs
